--- a/_data/reviews/review-trebuetsia-zashchita-po-ugolovnym-delam.yaml
+++ b/_data/reviews/review-trebuetsia-zashchita-po-ugolovnym-delam.yaml
@@ -1,7 +1,7 @@
 ---
 _id: d916418376ae6fbc4faff9acf103fc6fcee2b520
 name: berlin
-comment: Не переживай. Если надо уголовный адвокат, то лучше обращайся <a href="http://profikadri.ru/uslugi/uslugi-advokata/uslugi-advokata-po-ugolovnym-delam">http://profikadri.ru/uslugi/uslugi-advokata/uslugi-advokata-po-ugolovnym-delam</a>.
+comment: Не переживай. Если нужен уголовный адвокат, то лучше обращайся <a href="http://profikadri.ru/uslugi/uslugi-advokata/uslugi-advokata-po-ugolovnym-delam">http://profikadri.ru/uslugi/uslugi-advokata/uslugi-advokata-po-ugolovnym-delam</a>.
   Все сделают с учётом всех пожеланий.
 product: trebuetsia-zashchita-po-ugolovnym-delam
 date: "2020-02-10"
